2006-10-05  Dmitry Dulepov  <dmitry@typo3.org>

 * Added patch by Andreas Otto (field order and sorting in mod1 for Redirect view)
 * Fixed bug 3988: /start/Feedback gets not found because of uppercase; searchTitle_searchPid() return does not use "encoded" version in lookup

2006-10-03  Dmitry Dulepov  <dmitry@typo3.org>

 * Fixed bug #3517: Impossible to have same path on 2 domains

2006-09-07  Dmitry Dulepov  <typo3@accio.lv>

 * Release of RealURL 1.1.1

2006-08-28  Dmitry Dulepov  <typo3@accio.lv>

 * Fixed bug #3078: realurl doesn't take config.typolinkLinkAccessRestrictedPages into account

2006-08-25  Dmitry Dulepov  <typo3@accio.lv>

 * bk_realurl02 was too large

2006-08-17  Dmitry Dulepov  <typo3@accio.lv>

 * Made a workaround for error in parse_url() when parsing multiple arrays

2006-02-16  Dmitry Dulepov  <typo3@accio.lv>

 * Updated compatibility version

2006-01-29  Dmitry Dulepov  <typo3@accio.lv>

 * Fixed repeated message in EM to drop/add bk_realurl02 index

2006-01-27  Dmitry Dulepov  <typo3@accio.lv>

 * Fixed bug #2413: RealURL: wrong paths are generated if mount points are used
 * Fixed bug #2416: RealURL: wrong page is displayed
 * Fixed bug #1814: RealURL = MySQL database optimisation
 * Code cleanup (uninitialized vars, debuging messages, etc).
 * Updated extension API data
 * Changed XCLASS name of modfunc1 to match file name

2005-10-14  Kasper Skårhøj  <kasper2005@typo3.com>

 * en/decode caches will expire after 24 hours
 * Adding "userFunc" for id-alias translation (alternative to built in "lookUpTable")
 * Fixed a few bugs
 * Implemented "301 Moved Permanently" headers
 * Implemented a table where you can define permanent redirect URLs, for instance for keep backwards compatibility with specific old urls.
 * Implemented an error log that will track all URLs which resulted in a 404 - useful for checking most typical "lost links" and creating a redirect. Can be disabled with ['init']['disableErrorLog']